tests/baselines/reference/decrementAndIncrementOperators.errors.txt
==== tests/cases/compiler/decrementAndIncrementOperators.ts (13 errors) ====
    var x = 0;
    
    // errors
    1 ++;
    ~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    (1)++;
    ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    (1)--;
    ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    ++(1);
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --(1);
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    (1 + 2)++;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    (1 + 2)--;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    ++(1 + 2);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --(1 + 2);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    (x + x)++;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    (x + x)--;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    ++(x + x);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    --(x + x);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    //OK
    x++;
    x--;
    
    ++x;
    --x;
    
    (x)++;
    --(x);
    
    ((x))++;
    ((x))--;
    
    x[x++]++;
    